fix: use Collectors.toList() instead of toList() for mutable list
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>